kubernetes/order-svc.yaml
# order-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 50051
    targetPort: 50051
  type: ClusterIP
